# lbn-bot-spotter

./: LICENSE  README.md  noxfile.py  requirements.txt  setup.cfg  setup.py
notebooks/: eda.ipynb  spotter.ipynb
src/bot_spotter/: __init__.py  constants.py
src/bot_spotter/cli/: cli.py
src/bot_spotter/core/: spotter.py
tests/bot_spotter/cli/: test_cli.py
