[metadata]
version = attr: src.bot_spotter.__init__.__version__
[zest.releaser]
create-wheel = yes
extra-message = [skip ci]
python-file-with-version = src.bot_spotter/__init__.py
release = yes

[aliases]
test = pytest
[tool: pytest]
adopts = --cov-fail-under 0 --cov-report html:dist/coverage --cov=bot_spotter